# django-practice

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: generate-requirements.yml
myapp/: forms.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_task.py  0003_rename_tile_task_title.py  0004_task_done.py
myapp/static/styles/: main.css
myapp/templates/: about.html  index.html
myapp/templates/layouts/: base.html
myapp/templates/projects/: create_project.html  projects.html
myapp/templates/tasks/: create_task.html  tasks.html
myfirstsite/: settings.py  urls.py
