[tool.poetry]
name = "django-practice"
version = "0.1.0"
description = ""
authors = ["dany-herz42 <danyherzdev@gmail.com>"]
readme = "README.md"
packages = [{include = "django_practice"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
asgiref = "^3.7.2"
autopep8 = "^2.0.2"
pycodestyle = "^2.10.0"
sqlparse = "^0.4.4"
tomli = "^2.0.1"
tzdata = "^2023.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
